--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -30,6 +30,20 @@ finished: false
 * [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/g)
 
 
+
+```python
+def alphabet():
+    ''''return "ABCDEFGHIJKLMNOPQRSTUVWXYZ"'''
+    return ''.join(chr(i) for i in range(ord('A'), ord('Z') + 1))
+    # return "ABCDEFGHIJKLMNOPQRSTUVWXYZ
+```
+
+
+
+
+
+
+
 ## Color trackBack
 
 * [ultratb.ColorTB() (IPython)](https://stackoverflow.com/questions/37081116/how-to-get-pythons-terminal-error-to-be-in-color)
