--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -15,7 +15,7 @@ Les grandes lignes y sont mais de nombreux points sont vagues et restent à êtr
 
 ## Abstract
 
-Une platforme d'évaluation/critique anonyme (youtube like) mais avec login à creditential fort (via fb, gmail, ...).
+Une platforme d'évaluation/critique anonyme (youtube like) mais avec login à credential fort (via fb, gmail, ...).
     => trouver un moyen (stackoverflow like) d'obliger la critique constructive et objective
 
 * pour tous les domaines
@@ -81,7 +81,7 @@ Ce n'est plus une question de tenter de litiger discrètement ou de fournir un t
 
 * Lors d'un achat nous consultons les avis des consomateurs sur des sites comme Amazon.
 
-* Lors du choix d'un blabla car, nous consultons l'avis des autres internautes qui ont déjà voyagé et mis une cote à notre chaufeur potentiel.
+* Lors du choix d'un blabla car, nous consultons l'avis des autres internautes qui ont déjà voyagé et ajouté une cote à notre chaufeur potentiel.
 
 * Avant de voir un film au cinéma nous regardons les critiques des gens qui ont déja vu ce film pour nous faire une idée.
 
@@ -95,7 +95,7 @@ De façon surprenante, certains domaines sont épargnés et les trois cités dan
 
 Dans l'établissement que je fréquente, nous reçevons des questionnaires d'évaluation annonymes pour évaluer le corp professoral. Ces résultats sont transformé en statistiques par des employés de la même école. 
 
-Non seulement les éléments factuels que les élèves ont pris le temps de rédiger sont perdu et ne sont gardé que les cotes mais il est évident que la neutralité des résultats est hautement discutable car ces mêmes résultats sont affichés sur le site de l'école pour justifier la qualité de l'école.
+Non seulement les éléments factuels que les élèves ont pris le temps de rédiger sont perdu et ne sont gardé que les points mais il est évident que la neutralité des résultats est hautement discutable car ces mêmes résultats sont affichés sur le site de l'école pour justifier la qualité de l'école.
 
 C'est un peu comme demander aux élèves de se noter entre eux en gardant en tête que le score individuel a autant d'importance que le score global de la classe.
 
@@ -107,7 +107,7 @@ Une platforme dédiée à la l'évaluation/critique des éléments atomiques con
 
 Nous pouvons immaginer un site web du type de tripAdvisor où les utilisateurs sont invités à **critiquer de façon constructive** non pas une organisation entière car c'est rarement toute l'organisation qui est la cause du litige mais un membre constituant de cet organisation.
 
-Les critique peuvent être anonymes mais l'accès au droit de critique se fait via une authentification avec un créditential fort. À la façon des commentaires de youtube qui utilise un compte gmail pour authentifier l'utilisateur mais permet à l'utilisateur si il le souhaite de poster sous un pseudonyme et en empéchant les autres utilisateurs d'avoir accès à son identité. Cette technique est un premier filtre pour empécher les gens de faire tout et n'importe quoi. On est moins enclains à faire de la merde quand notre identité est accessible pour les modérateurs. Même si ça n'empèche pas d'avoirs des commentaires de faible qualité, celà empêche les dérives de sites totalements annonymes. De plus cette façon de faire encourrage les membres d'une certaine organisation (qui sont les plus au courrant de ce qu'il s'y passe) à poster des critiques sans avoir peur pour leur position ou status social.
+Les critique peuvent être anonymes mais l'accès au droit de critique se fait via une authentification avec un credential fort. À la façon des commentaires de youtube qui utilise un compte gmail pour authentifier l'utilisateur mais permet à l'utilisateur si il le souhaite de poster sous un pseudonyme et en empéchant les autres utilisateurs d'avoir accès à son identité. Cette technique est un premier filtre pour empécher les gens de faire tout et n'importe quoi. On est moins enclains à faire de la merde quand notre identité est accessible pour les modérateurs. Même si ça n'empèche pas d'avoirs des commentaires de faible qualité, celà empêche les dérives de sites totalements annonymes. De plus cette façon de faire encourrage les membres d'une certaine organisation (qui sont les plus au courrant de ce qu'il s'y passe) à poster des critiques sans avoir peur pour leur position ou status social.
 
 Le réseau Stack Exchange (Stack Overflow, Ask Ubuntu, Super User,...) est un bon exemple d'un système qui pourait être implémenté pour jauger la **qualité des critiques**. Sur ce réseau, les utilisateurs peuvent poser des questions et soumettre des réponses. Ils sont ensuite récompensés par les autres utilisateurs par un système de vote permettant d'approuver (up vote) ou de sanctionner (down vote) l'utilisateur via des points de "karma", nommées réputation sur le réseau. Ainsi, les réponses de meilleur qualité sont mises en avant par leurs nombres de votes. Ce genre de réseau est la preuve qu'une "board de discussion" peut être absente de phénomènes de trolling. 
 
