--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -111,7 +111,7 @@ Les critique peuvent être anonymes mais l'accès au droit de critique se fait v
 
 Le réseau Stack Exchange (Stack Overflow, Ask Ubuntu, Super User,...) est un bon exemple d'un système qui pourait être implémenté pour jauger la **qualité des critiques**. Sur ce réseau, les utilisateurs peuvent poser des questions et soumettre des réponses. Ils sont ensuite récompensés par les autres utilisateurs par un système de vote permettant d'approuver (up vote) ou de sanctionner (down vote) l'utilisateur via des points de "karma", nommées réputation sur le réseau. Ainsi, les réponses de meilleur qualité sont mises en avant par leurs nombres de votes. Ce genre de réseau est la preuve qu'une "board de discussion" peut être absente de phénomènes de trolling. 
 
-Le site présenté ici n'a pas vocation à être un forum de discussion (d'autres solutions peuvent être envisagées pour couvrir cet aspect). Ici, l'accent est mis sur le caractère objectif des commentaires et des cotes.
+Le site présenté ici n'a pas vocation à être un forum de discussion (d'autres solutions peuvent être envisagées pour couvrir cet aspect). Ici, l'accent est mis sur le caractère **objectif** des critiques et des cotes.
 
 Pour reprendre l'exemple de Stack Exchange et plus particulièrement stack overflow, ce site est totalement absent de troll et les informations que nous retrouvons en tête des divers sujets sont uniquement des réponses pertinentes, absentes de jugements de valeur et à but informatif. 
 
@@ -121,9 +121,7 @@ Pour reprendre l'exemple de Stack Exchange et plus particulièrement stack overf
 
 Cet outil est à double tranchant. Non seulement il permet à un utilisateur de se faire une idée concernant une organistion mais elle permet également de créér un sentiment de crainte chez les personnes qui tendent à abuser des droits des autres.
 
-tripAdvisor apporte beaucoup à la transparance et à l'éviction de l'arnaque. Il permet d'un coté à l'utilisateur de jauger la qualité du lieux et d'un autre coté **oblige les établissements à fournir un service de qualité de peur de sombrer dans les abimes du ranking** et d'avoir une faible visibilité pour les nombreux utilisateurs qui utilisent ce site pour leurs divers choix. C'est doublement bénéfique et apporte une solution pour lutter éfficacement contre l'arnaque.
-
-Concernant les technologies employé par le projet présenté ici de nombreuses technique peuvent être emprunté au plateforme déja existantes et être adptés pour pemetre la création d'une nouvelle platforme qui bataillerait dans une autre niche d'autres formes de maux de notre société.
+TripAdvisor apporte beaucoup de transparence dans le domaine du tourisme et à l'éviction de l'arnaque. Il permet d'un coté à l'utilisateur de jauger la qualité d'un lieu et d'un autre il **oblige les établissements à fournir un service de qualité de peur de sombrer dans les abimes du ranking**. C'est non seulement un service mais en plus, il apporte une solution pour lutter éfficacement contre l'arnaque.
 
 Ces lignes ne sont qu'un premier jet et de nombreux éléments restent à définir mais je pense que l'idée est posée.
 
