--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -16,7 +16,7 @@ Les grandes lignes y sont mais de nombreux points sont vagues et restent à êtr
 ## Abstract
 
 Une platforme d'évaluation/critique anonyme (youtube like) mais avec login à credential fort (via fb, gmail, ...).
-    => trouver un moyen (stackoverflow like) d'obliger la critique constructive et objective
+    $$ \Rightarrow $$  trouver un moyen (stackoverflow like) d'obliger la critique constructive et objective
 
 * pour tous les domaines
     * écoles
