--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -31,12 +31,22 @@ finished: false
 
 
 
-```python
-def alphabet():
-    ''''return "ABCDEFGHIJKLMNOPQRSTUVWXYZ"'''
-    return ''.join(chr(i) for i in range(ord('A'), ord('Z') + 1))
-    # return "ABCDEFGHIJKLMNOPQRSTUVWXYZ
-```
+## Virtualenv + zsh
+* [install on unbuntu](http://bicofino.io/2015/02/10/install-virtualenv-and-virtualenvwrapper-on-ubuntu-14-dot-04-2/)
+
+* `mkvirtualenv` _name_ $$ \Rightarrow $$ new virtualenv
+* `workon` _name_ $$ \Rightarrow $$ switch to "name" virtualenv
+* `workon` $$ \Rightarrow $$ list virtualenvs
+* `lsvirtualenv` $$ \Rightarrow $$ same
+* `deactivate` $$ \Rightarrow $$ leave current virtualenv
+* `virtualenv --version` $$ \Rightarrow $$ check version
+
+* `mkproject` _name_ $$ \Rightarrow $$ creates a project **directory** 
+* `deactivate` $$ \Rightarrow $$ leave current project
+
+* `rmvirtualenv` _name_ $$ \Rightarrow $$ delete project
+* `cdvirtualenv` $$ \Rightarrow $$ navigate into the directory of the currently activated venv.
+* `lssitepackages` $$ \Rightarrow $$ show content of `site-packages` directory
 
 
 
