--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -34,6 +34,8 @@ finished: false
 ## Virtualenv + zsh
 * [install on unbuntu](http://bicofino.io/2015/02/10/install-virtualenv-and-virtualenvwrapper-on-ubuntu-14-dot-04-2/)
 
+* [virtualenv-doc](https://python-guide.readthedocs.io/en/latest/dev/virtualenvs/)
+
 * `mkvirtualenv` _name_ $$ \Rightarrow $$ new virtualenv
 * `workon` _name_ $$ \Rightarrow $$ switch to "name" virtualenv
 * `workon` $$ \Rightarrow $$ list virtualenvs
