--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -51,7 +51,19 @@ finished: false
 * `lssitepackages` $$ \Rightarrow $$ show content of `site-packages` directory
 
 
+### Exemple de nouveau venv pour openCV
 
+```py
+# create venv
+$ mkvirtualenv openCV -p python3
+$ workon openCV
+
+# install usefull libs within this venv
+$ pip install numpy scipy matplotlib scikit-image scikit-learn ipython
+
+# quit venv
+$ deactivate
+```
 
 
 
