--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -33,7 +33,6 @@ finished: false
 
 ## Virtualenv + zsh
 * [install on unbuntu](http://bicofino.io/2015/02/10/install-virtualenv-and-virtualenvwrapper-on-ubuntu-14-dot-04-2/)
-
 * [virtualenv-doc](https://python-guide.readthedocs.io/en/latest/dev/virtualenvs/)
 
 * `mkvirtualenv` _name_ $$ \Rightarrow $$ new virtualenv
@@ -64,6 +63,10 @@ $ pip install numpy scipy matplotlib scikit-image scikit-learn ipython
 # quit venv
 $ deactivate
 ```
+
+## openCV install (linux)
+* [install guide](https://www.learnopencv.com/install-opencv3-on-ubuntu/)
+
 
 
 
