--- a/_posts/2017-08-17-py-projet-p1.markdown
+++ b/_posts/2017-08-17-py-projet-p1.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Py: remake du projet p1"
-subtitle: "Interface graphique Tkinter Python"
+title: "Py: remake projet p1"
+subtitle: "remake du projet p1"
 date: 2017-08-17
 author: Sol
 category: Py
