--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -30,6 +30,15 @@ finished: false
 * [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/g)
 
 
+## Poids (bytes) d'une structure de données
+
+```python
+>>> a = [1,2,3,4]
+>>> print(sys.getsizeof(a))
+96
+```
+
+
 
 ## Virtualenv + zsh
 * [install on unbuntu](http://bicofino.io/2015/02/10/install-virtualenv-and-virtualenvwrapper-on-ubuntu-14-dot-04-2/)
