--- a/_posts/2017-08-16-py-projet-p1.markdown
+++ b/_posts/2017-08-16-py-projet-p1.markdown
@@ -22,7 +22,7 @@ Dans le fichier **processIng.py**, la classe `ProcessImg` se charge de traiter l
 
 * Les attributs `self.height` et `self.width` contiennent repectivement la largeur et la longueur totale de l'image originiale calculés à partir de la methode `shape` de l'objet `self.original`
 
-* `self.processed` contient un appel de la methode `self.__process()` qui se charge d'appliquer le traitement à l'image.
+* `self.processed` contient un appel de la methode `__process()` qui se charge d'appliquer le traitement à l'image.
 
 ```python
 def __process(self):
@@ -50,7 +50,7 @@ def __process(self):
             resized = cv2.resize(img, (xx, yy))
             return resized
     ``` 
-5. Est retourné à l'attribut `self.processed` la detection de bords redimensionnée et à laquelle on ajoute un padding pour éviter les overflow lors de la recherche de points par la suite.
+5. Est retourné à l'attribut `self.processed` la detection de bords redimensionnée et à laquelle on ajoute un padding via la méthode `padding()` pour éviter les overflow lors de la recherche de points par la suite.
     ```python
         def padding(self, canny):
         return cv2.copyMakeBorder(
@@ -65,11 +65,21 @@ def __process(self):
 La methode `self.display()` permet d'afficher l'image après process. Elle fait appel à plusieurs methodes d'**openCV** pour controler la fenêtre d'affichage.
 
 
+## classe Grid
+Dans le fichier **processImg.py**, la class `Grid` se charge de traiter une liste 2d qui sort de la classe `ProcessImg` pour la mettre sous forme de liste 1d.
+
+> Elle devrait également gérer toute la logique pour permettre d'utiliser cette liste comme si l'image était sous forme d'une liste 2d. <span style="color: red"> A réfléchir </span> 
+
+* `self.img` contient un objet de type `ProcessImg` auquel est passé l'image reçu en argument lors de l'instanciation d'un objet de type `Grid`
+* `self.canny` contient un **numpy array** des points composant les bords de l'image contenue dans `self.img`.
+* `self.len` contient le nombre de points composant `self.canny`
+* `self.height`, `self.width` contiennent une vision logique du format des points contenu dans `self.canny`
+
+### bin_list
+
+Cette methode retourne un `bytearray` contenant les points de l'image après traitement par la methode `__process()` de la classe `ProcessImg`. 
 
 
-
-## A CONTINUER, CETTE METHODE NE MARCHE PLUS POUR CETTE CLASSE
-`self.coords_file([nom de fichier])` retourne un fichier contenant une liste des points de
 
 
 ## Traitement liste de points
