--- a/_posts/2017-08-16-py-projet-p1.markdown
+++ b/_posts/2017-08-16-py-projet-p1.markdown
@@ -76,7 +76,7 @@ Dans le fichier **processImg.py**, la class `Grid` se charge de traiter une list
 * `self.height`, `self.width` contiennent une vision logique du format des points contenu dans `self.canny`
 
 ### bin_list
-Cette methode retourne un `bytearray` contenant les points de l'image après traitement par la methode `__process()` de la classe `ProcessImg`. 
+Cette methode retourne un `bytearray` contenant les points de l'image après traitement par la methode `__process()` de la classe `ProcessgImg`. 
 
 
 
