--- a/_posts/2017-09-3-perso .markdown
+++ b/_posts/2017-09-3-perso .markdown
@@ -5,8 +5,13 @@ date: 2017-09-03
 finished: false
 ---
 
-## Gist settings Vs-Code-linux
+## Gist settings Vs-Code-Linux
 
 ```
 4a5ccacf9063e79bcc1a66836f831e38761f9c3f
+```
+
+## Gist settings Vs-Code-Windows
+```
+23f1e9a909e77fa8876b5cf65abc2187
 ```
