--- a/_posts/2017-06-27-ksp.markdown
+++ b/_posts/2017-06-27-ksp.markdown
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Divers: Kerbal Space Program (en-fr)"
+title: "KSP: Base"
 subtitle: ""
 date: 2017-06-27
 author: Sol
-category: Divers
+category: KSP
 tags: divers, fr, en
 finished: false
 mathjax: true
@@ -37,13 +37,6 @@ Quand on parle de vélocité, on parle de la **vitesse** à laquelle un objet se
 
 ### Complément d'informations
 La relation mathématique entre **position**, **vélocité** et **accélération** et leur exploration est ce qui à donné naissance à la branche des maths appellée annalyse.
-
-
-
-![alt](https://wiki.kerbalspaceprogram.com/images/thumb/c/cd/Simple_orbit_diagram.svg/900px-Simple_orbit_diagram.svg.pngk)
-
-
-
 
 
 
@@ -181,6 +174,4 @@ Poussée **Retrograde** (à l'Apoapsis pour une efficacité optimale) jusqu'à c
 ## Divers
 
 ![alt](/00illustrations/ksp/align.png)
-
-     
 
