--- a/_posts/2017-10-21-ksp-perso.markdown
+++ b/_posts/2017-10-21-ksp-perso.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Divers: KSP: planification  (en-fr)"
+title: "KSP: planification mission Duna  (en-fr)"
 subtitle: ""
 date: 2017-10-05
 author: Sol
