--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -31,6 +31,52 @@ mathjax: true
 * [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/g)
 
 
+## Compter des occurences
+
+### Toutes les occurences dans une liste:
+
+```python
+>>> import random
+>>> from collections import Counter
+>>>
+>>> l = [random.randint(1,10) for i in range(1000)]
+>>>> print(Counter(l))
+Counter({5: 115, 8: 111, 7: 104, 2: 102, 1: 101, 3: 100, 6: 97, 4: 94, 10: 90, 9: 86})
+```
+
+```python
+>>> s = "j'aime la viande rouge bien cuite"
+>>> print(Counter(s))
+Counter({'e': 5, ' ': 5, 'i': 4, 'a': 3, 'u': 2, 'n': 2, 'j': 1, 'r': 1, 'b': 1, 'd': 1,
+'m': 1, 't': 1, "'": 1, 'l': 1, 'v': 1, 'c': 1, 'g': 1, 'o': 1})
+```
+
+### Sous forme de tuples
+Permet de pouvoir utiliser un indexe pour sortir directement une valeur:
+
+```python
+s = "j'aime la viande rouge bien cuite"
+counted = Counter(s).most_common()
+print("Le char '{}' apparait le plus dans la string:\n{}\n\
+    Nombre d'occurences: {}\n Suivi par le char '{}' \
+    qui apparait {} fois.".format(
+        counted[0][0], s, counted[0][1], counted[1][0], counted[1][1]))
+```
+
+**return:**
+
+```
+Le char e apparait le plus dans la string:
+j'aime la viande rouge bien cuite
+    Nombre d'occurences:5
+ Suivi par le char ' '     qui apparait 5 fois.
+ ```
+
+
+
+
+
+
 ## Poids (bytes) d'une structure de données
 
 ```python
