--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -114,7 +114,26 @@ except:
         print('The traceback info was written to errorInfo.txt.')
 
 116 
-The traceback info was written to errorInfo.txt.
+The traceback info was written to errorInfo.txt
+```
+
+## Assert
+```py
+>>> a = 22
+>>> assert a == 22, '\'a\' doit valoir 22'
+>>>
+>>> a = 15
+>>> assert a == 22, '\'a\' doit valoir 22'
+```
+
+**return:**
+
+```py
+Traceback (most recent call last):
+  File "c:\Users\sol.rosca\Cloud\Cours\Programmation\Python\Python-Automate-the-boring-stuff\02Assert\00.py", line 5, in <module>
+    assert a == 22, '\'a\' doit valoir 22'
+AssertionError: 'a' doit valoir 22
+```
 
 
 ## Poids (bytes) d'une structure de données
