--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -31,7 +31,7 @@ mathjax: true
 * [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/g)
 * [Python 201](https://www.blog.pythonlibrary.org/2017/03/08/python-201-is-now-an-online-course/)
 
-## Classe object
+## Classe de base: Object
 En python 3 il n'est plus nécéssaire d'explicitement dire à Python qu'une classe hérite de la classe de base `object`.
 
 ```py
@@ -40,6 +40,9 @@ class Parent():
         pass
 ```
 Cette classe hérite implicitement de la classe `object`
+
+## Fonctions dangereuses
+[Kevin London's blog](https://www.kevinlondon.com/2015/07/26/dangerous-python-functions.html)
 
 
 ## Compter des occurences
