--- a/_posts/2017-09-3-perso .markdown
+++ b/_posts/2017-09-3-perso .markdown
@@ -5,17 +5,16 @@ date: 2017-09-03
 finished: false
 ---
 
-## Gist settings Vs-Code-Linux
 
-```
-85934142a6f03cc9c993dba376527fa2bbc84112
-```
-
-## Gist settings Vs-Code-Windows
+## Gist settings Vs-Code old
 ```
 23f1e9a909e77fa8876b5cf65abc2187
 ```
 
+## Gist settings Vs-Code new (10 novembre 2017)
+```
+83526f5b9228bd34d379ceaf371e87eeac184a0f
+```
 
 ## Plotly API key
 ```
