--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -163,6 +163,14 @@ else:
     sys.excepthook = IPython.core.ultratb.ColorTB()
 ```
 
+ou
+
+
+```py
+import sys, IPython.core.ultratb
+sys.excepthook = IPython.core.ultratb.ColorTB(color_scheme='LightBG')
+```
+
 
 * [colored-traceback](https://pypi.python.org/pypi/colored-traceback/0.3.0)
 
