--- a/_posts/2017-09-3-perso .markdown
+++ b/_posts/2017-09-3-perso .markdown
@@ -13,7 +13,8 @@ finished: false
 
 ## Gist settings Vs-Code new (10 novembre 2017)
 ```
-83526f5b9228bd34d379ceaf371e87eeac184a0f
+    "token": "83526f5b9228bd34d379ceaf371e87eeac184a0f",
+    "id": "232bfd697f9fed0dd14c70ff84e547a9"
 ```
 
 ## Plotly API key
