--- a/_posts/2017-09-3-perso .markdown
+++ b/_posts/2017-09-3-perso .markdown
@@ -35,3 +35,38 @@ fromagerieSA
 
 
 
+## Quotes
+
+### Motivation
+
+> Stay stupid or fight for being smart.
+
+> There will always be someone who can't see your worth. Don't let it be you.
+
+> The trick to being smart is knowing when to play dumb. V. Alexander
+
+
+
+
+### Annif Steph
+
+>On dit que les filles intelligentes savent **comment** aimer. Mais une fille plus intélligente sait **qui** aimer.
+
+>Une ame soeur c'est quelqu'un qui apprécie ton niveau de bizzarerie.
+
+> Alone we are smart. Togheter we are brilliant.
+
+> You can tell how smart people are by what they laugh at.
+
+
+
+Mon père dit qu'être seul c'est être fort. Je pense qu'il a tord car à deux on est clairement les meilleurs.
+
+Ca casse un peu la logique, mais je m'en fout car avec toi la vie est magique.
+
+Je t'aime !
+
+
+
+
+
