--- a/_posts/2017-09-3-perso .markdown
+++ b/_posts/2017-09-3-perso .markdown
@@ -6,9 +6,9 @@ finished: false
 ---
 
 
-## Gist settings Vs-Code old
+## Gist settings 21/11/2017
 ```
-23f1e9a909e77fa8876b5cf65abc2187
+b5e1691131bb7d649672a1f1add03c37fc4ccda3
 ```
 
 ## Gist settings Vs-Code new (10 novembre 2017)
@@ -32,39 +32,6 @@ Username: Roscas
 ### github
 fromagerieSA
 * meme mdp
-
-
-
-## Quotes
-
-### Motivation
-
-> Stay stupid or fight for being smart.
-
-> There will always be someone who can't see your worth. Don't let it be you.
-
-> The trick to being smart is knowing when to play dumb. V. Alexander
-
-
-
-
-### Annif Steph
-
->On dit que les filles intelligentes savent **comment** aimer. Mais une fille plus intélligente sait **qui** aimer.
-
->Une ame soeur c'est quelqu'un qui apprécie ton niveau de bizzarerie.
-
-> Alone we are smart. Togheter we are brilliant.
-
-> You can tell how smart people are by what they laugh at.
-
-
-
-Mon père dit qu'être seul c'est être fort. Je pense qu'il a tord car à deux on est clairement les meilleurs.
-
-Ca casse un peu la logique, mais je m'en fout car avec toi la vie est magique.
-
-Je t'aime !
 
 
 
